feat: ekyc integration completed

--- a/web.config
+++ b/web.config
@@ -2,16 +2,14 @@
 <configuration>
  <appSettings>
             <add key="PORT" value="443" />
-            <!-- <add key="PRO_DB_HOST" value="LAPTOP-D97QEO1R" /> -->
             <add key="PRO_DB_HOST" value="EDCS-DB-VP30" />
             <add key="PRO_DB_PORT" value="1433" />
             <add key="PRO_DB_USERNAME" value="sa" />
-            <add key="PRO_DB_PASSWORD" value="oss@12345" />
-            <add key="PRO_DB_DATABASE" value="oss" />
+            <add key="PRO_DB_PASSWORD" value="edcs@12345" />
+            <add key="PRO_DB_DATABASE" value="parihara" />
             <add key="HASHING512" value="sha512" />
             <add key="HASHING256" value="sha256" />
             <add key="HASHINGSHA1" value="sha1" />
-            <add key="SATS_API" value="http://124.123.123.167/STSWS/services/getStudentDataForSevaSindhu" />
             <add key="KUTUMBA_API" value="https://kutumba-services.karnataka.gov.in/fidapienc/getbeneficiarydata" />
             <add key="KUTUMBA_IV_KEY" value="1231233213214566" />
             <add key="KUTUMBA_AES_KEY" value="6FF79A4EEB154E9C89BAFCD67447B560" />
@@ -25,7 +23,18 @@
             <add key="TEMPLATE_ID_UNICODE" value="1107167998591733125" />
             <add key="TEMPLATE_ID_FOR_DELIVER" value="1107169468548063830" />
             <add key="TEMPLATE_ID_KANNADA" value="1107170713287653577" />
-            <add key="SMS_API" value="http://smsmobileone.karnataka.gov.in/index.php/sendmsg" />
+            <add key="SMS_API" value="http://smsmobile1.karnataka.gov.in/index.php/sendmsg" />
+            <!-- ekyc details -->
+            <add key="EKYC_URL" value="https://dbt.karnataka.gov.in/HSMService/authrequest.aspx" />
+            <add key="EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in/HSMService/EKYCService.aspx" />
+            <add key="EKYC_REDIRECTION_URL" value="http://localhost:8881/mobile/ekyRedirection" />
+            <add key="DEP_CODE" value="19" />
+            <add key="APPLI_CODE" value="61" />
+            <add key="SCHEME_CODE" value="109" />
+            <add key="INTEGRATION_KEY" value="b02a5cd3-8441-40e5-8454-27a053c968e0" />
+            <add key="INTEGRATION_PASS" value="58-@_8k7y$18tnQO" />
+            <add key="SERVICE_CODE" value="3" />
+
   </appSettings>
 
 <system.webServer>
