--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/EdcsMobileOne/parihara#readme",
   "dependencies": {
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mssql": "^10.0.2",
     "nodemon": "^3.1.0",
