--- a/web.config
+++ b/web.config
@@ -2,11 +2,11 @@
 <configuration>
  <appSettings>
             <add key="PORT" value="443" />
-            <add key="PRO_DB_HOST" value="EDCS-DB-VP30" />
+            <add key="PRO_DB_HOST" value="EDCS-DB-VP08" />
             <add key="PRO_DB_PORT" value="1433" />
-            <add key="PRO_DB_USERNAME" value="sa" />
-            <add key="PRO_DB_PASSWORD" value="edcs@12345" />
-            <add key="PRO_DB_DATABASE" value="parihara" />
+            <add key="PRO_DB_USERNAME" value="EDCSUSER4" />
+            <add key="PRO_DB_PASSWORD" value="EDCS@1234" />
+            <add key="PRO_DB_DATABASE" value="parihara_mone" />
             <add key="HASHING512" value="sha512" />
             <add key="HASHING256" value="sha256" />
             <add key="HASHINGSHA1" value="sha1" />
@@ -25,15 +25,17 @@
             <add key="TEMPLATE_ID_KANNADA" value="1107170713287653577" />
             <add key="SMS_API" value="http://smsmobile1.karnataka.gov.in/index.php/sendmsg" />
             <!-- ekyc details -->
-            <add key="EKYC_URL" value="https://dbt.karnataka.gov.in/HSMService/authrequest.aspx" />
-            <add key="EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in/HSMService/EKYCService.aspx" />
-            <add key="EKYC_REDIRECTION_URL" value="http://localhost:8881/mobile/ekyRedirection" />
-            <add key="DEP_CODE" value="19" />
-            <add key="APPLI_CODE" value="61" />
-            <add key="SCHEME_CODE" value="109" />
-            <add key="INTEGRATION_KEY" value="b02a5cd3-8441-40e5-8454-27a053c968e0" />
-            <add key="INTEGRATION_PASS" value="58-@_8k7y$18tnQO" />
+            <add key="EKYC_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/AuthRequest.aspx" />
+            <add key="EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/EKYCService.aspx" />
+            <add key="EKYC_REDIRECTION_URL" value="https://parihara2.karnataka.gov.in/mobile/ekyRedirection" />
+            <add key="DEP_CODE" value="1" />
+            <add key="APPLI_CODE" value="30" />
+            <add key="SCHEME_CODE" value="229" />
+            <add key="INTEGRATION_KEY" value="b8be83b7-b4ee-4c7d-b142-e8fb0e05a242" />
+            <add key="INTEGRATION_PASS" value="8$xaSXRJ_6p7967X" />
             <add key="SERVICE_CODE" value="3" />
+
+            <add key="SECRET_KEY" value="lllkjytrdxcvbnaystdyasyjhbvcf" />
 
   </appSettings>
 
