--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mssql": "^10.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
