--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ts-node": "^10.9.2",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.20",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "xlsx": "^0.18.5"
   }
 }
