--- a/web.config
+++ b/web.config
@@ -2,20 +2,24 @@
 <configuration>
  <appSettings>
             <add key="PORT" value="443" />
-            <add key="PRO_DB_HOST" value="EDCS-DB-VP08" />
+            <add key="PRO_DB_HOST" value="EDCS-DB-VP22" />
             <add key="PRO_DB_PORT" value="1433" />
-            <add key="PRO_DB_USERNAME" value="EDCSUSER4" />
+            <!-- <add key="PRO_DB_USERNAME" value="EDCSUSER4" />
             <add key="PRO_DB_PASSWORD" value="EDCS@1234" />
-            <add key="PRO_DB_DATABASE" value="parihara_mone" />
+            <add key="PRO_DB_DATABASE" value="parihara_mone" /> -->
+            <add key="PRO_DB_USERNAME" value="spectacles" />
+            <add key="PRO_DB_PASSWORD" value="SPECT@C!ES@EDC$@12" />
+            <add key="PRO_DB_DATABASE" value="parihara" />
             <add key="HASHING512" value="sha512" />
             <add key="HASHING256" value="sha256" />
             <add key="HASHINGSHA1" value="sha1" />
-            <add key="KUTUMBA_API" value="https://kutumba-services.karnataka.gov.in/fidapienc/getbeneficiarydata" />
+            <!-- kutumba -->
+            <add key="KUTUMBA_API" value="https://kutumba-services.karnataka.gov.in/testfidapienc1/Getbeneficiarydata" />
             <add key="KUTUMBA_IV_KEY" value="1231233213214566" />
-            <add key="KUTUMBA_AES_KEY" value="6FF79A4EEB154E9C89BAFCD67447B560" />
-            <add key="KUTUMA_CLIENT_CODE" value="1737296940" />
-            <add key="KUTUMBA_CLIENT_SEC_KEY" value="7BF4B273-A0B7-470F-B188-CFBED6B54943" />
-            <add key="SMS_API_SERVICE_KEY" value="5c39cb69-8dbb-4c01-bc2c-cbf44a99de72" />
+            <add key="KUTUMBA_AES_KEY" value="27E61F98FCE446BB86D0D271307D96DB" />
+            <add key="KUTUMA_CLIENT_CODE" value="3831757727" />
+            <add key="KUTUMBA_CLIENT_SEC_KEY" value="676157FF-5EF3-40A5-87B1-3DAD8E987B27" />
+            <!-- end kutumba -->
             <add key="SMS_SENDER_ID" value="MOBKAR" />
             <add key="SMS_USERNAME" value="Mobile_1-MOBKAR9" />
             <add key="SMS_PASSWORD" value="mobkar9@1234" />
@@ -23,7 +27,8 @@
             <add key="TEMPLATE_ID_UNICODE" value="1107167998591733125" />
             <add key="TEMPLATE_ID_FOR_DELIVER" value="1107169468548063830" />
             <add key="TEMPLATE_ID_KANNADA" value="1107170713287653577" />
-            <add key="SMS_API" value="http://smsmobile1.karnataka.gov.in/index.php/sendmsg" />
+            <add key="SMS_API" value="http://65.2.276.193/index.php/sendmsg" />
+            <add key="SMS_API_SERVICE_KEY" value="5c39cb69-8dbb-4c01-bc2c-cbf44a99de72" />
             <!-- ekyc details -->
             <add key="EKYC_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/AuthRequest.aspx" />
             <add key="EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/EKYCService.aspx" />
@@ -36,6 +41,7 @@
             <add key="SERVICE_CODE" value="3" />
 
             <add key="SECRET_KEY" value="lllkjytrdxcvbnaystdyasyjhbvcf" />
+            <add key="PRO_URL" value="https://spectacles.karnataka.gov.in" />
 
   </appSettings>
 
