assignment changes updated

--- a/web.config
+++ b/web.config
@@ -4,11 +4,11 @@
             <add key="PORT" value="443" />
             <add key="PRO_DB_HOST" value="EDCS-DB-VP22" />
             <add key="PRO_DB_PORT" value="1433" />
-            <!-- <add key="PRO_DB_USERNAME" value="EDCSUSER4" />
-            <add key="PRO_DB_PASSWORD" value="EDCS@1234" />
-            <add key="PRO_DB_DATABASE" value="parihara_mone" /> -->
-            <add key="PRO_DB_USERNAME" value="spectacles" />
-            <add key="PRO_DB_PASSWORD" value="SPECT@C!ES@EDC$@12" />
+            <add key="PRO_DB_USERNAME" value="sa" />
+            <add key="PRO_DB_PASSWORD" value="edcs@1234" />
+            <add key="PRO_DB_DATABASE" value="parihara" />
+            <!-- <add key="PRO_DB_USERNAME" value="spectacles" /> -->
+            <!-- <add key="PRO_DB_PASSWORD" value="SPECT@C!ES@EDC$@12" /> -->
             <add key="PRO_DB_DATABASE" value="parihara" />
             <add key="HASHING512" value="sha512" />
             <add key="HASHING256" value="sha256" />
