--- a/web.config
+++ b/web.config
@@ -24,15 +24,12 @@
             <add key="SMS_USERNAME" value="Mobile_1-MOBKAR9" />
             <add key="SMS_PASSWORD" value="mobkar9@1234" />
             <add key="TEMPLATE_ID" value="1107160499737707035" />
-            <add key="TEMPLATE_ID_UNICODE" value="1107167998591733125" />
-            <add key="TEMPLATE_ID_FOR_DELIVER" value="1107169468548063830" />
-            <add key="TEMPLATE_ID_KANNADA" value="1107170713287653577" />
             <add key="SMS_API" value="http://65.2.276.193/index.php/sendmsg" />
             <add key="SMS_API_SERVICE_KEY" value="5c39cb69-8dbb-4c01-bc2c-cbf44a99de72" />
             <!-- ekyc details -->
             <add key="EKYC_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/AuthRequest.aspx" />
             <add key="EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/EKYCService.aspx" />
-            <add key="EKYC_REDIRECTION_URL" value="https://parihara2.karnataka.gov.in/mobile/ekyRedirection" />
+            <add key="EKYC_REDIRECTION_URL" value="https://parihara3.karnataka.gov.in/mobile/ekyRedirection" />
             <add key="DEP_CODE" value="1" />
             <add key="APPLI_CODE" value="30" />
             <add key="SCHEME_CODE" value="229" />
@@ -40,8 +37,20 @@
             <add key="INTEGRATION_PASS" value="8$xaSXRJ_6p7967X" />
             <add key="SERVICE_CODE" value="3" />
 
+            <add key="DEMO_EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/IDService.aspx" />
+            <add key="DEMO_DEP_CODE" value="1" />
+            <add key="DEMO_APPLI_CODE" value="1068" />
+            <add key="DEMO_SCHEME_CODE" value="229" />
+            <add key="DEMO_INTEGRATION_KEY" value="3505de0b-d4f0-4723-9436-15579b6129f0" />
+            <add key="DEMO_INTEGRATION_PASS" value="_qB@$2RN7859z96Z" />
+
+            <add key="KUTUMBA_API" value="https://kutumba-services.karnataka.gov.in/testfidapienc1/Getbeneficiarydata" />
+            <add key="KUTUMBA_IV_KEY" value="1231233213214566" />
+            <add key="KUTUMBA_AES_KEY" value="27E61F98FCE446BB86D0D271307D96DB" />
+            <add key="KUTUMA_CLIENT_CODE" value="3831757727" />
+            <add key="KUTUMBA_CLIENT_SEC_KEY" value="676157FF-5EF3-40A5-87B1-3DAD8E987B27" />
             <add key="SECRET_KEY" value="lllkjytrdxcvbnaystdyasyjhbvcf" />
-            <add key="PRO_URL" value="https://spectacles.karnataka.gov.in" />
+            <add key="PRO_URL" value="https://pariahra3.karnataka.gov.in" />
 
   </appSettings>
 
