fixed ekyc adn demo

--- a/web.config
+++ b/web.config
@@ -2,24 +2,21 @@
 <configuration>
  <appSettings>
             <add key="PORT" value="443" />
-            <add key="PRO_DB_HOST" value="EDCS-DB-VP22" />
+            <add key="PRO_DB_HOST" value="EDCS-DB-VP08" />
             <add key="PRO_DB_PORT" value="1433" />
-            <add key="PRO_DB_USERNAME" value="sa" />
-            <add key="PRO_DB_PASSWORD" value="edcs@1234" />
-            <add key="PRO_DB_DATABASE" value="parihara" />
-            <!-- <add key="PRO_DB_USERNAME" value="spectacles" /> -->
-            <!-- <add key="PRO_DB_PASSWORD" value="SPECT@C!ES@EDC$@12" /> -->
-            <add key="PRO_DB_DATABASE" value="parihara" />
+            <add key="PRO_DB_USERNAME" value="parihara_mone" />
+            <add key="PRO_DB_PASSWORD" value="Parihara!@#123" />
+            <add key="PRO_DB_DATABASE" value="parihara_mone" />
             <add key="HASHING512" value="sha512" />
             <add key="HASHING256" value="sha256" />
             <add key="HASHINGSHA1" value="sha1" />
             <!-- kutumba -->
-            <add key="KUTUMBA_API" value="https://kutumba-services.karnataka.gov.in/testfidapienc1/Getbeneficiarydata" />
+            <add key="KUTUMBA_API" value="https://kutumba-services.karnataka.gov.in/fidapienc/Getbeneficiarydata" />
             <add key="KUTUMBA_IV_KEY" value="1231233213214566" />
-            <add key="KUTUMBA_AES_KEY" value="27E61F98FCE446BB86D0D271307D96DB" />
+            <add key="KUTUMBA_AES_KEY" value="58295BE705C44F288BC39FAD872E5C27" />
             <add key="KUTUMA_CLIENT_CODE" value="3831757727" />
-            <add key="KUTUMBA_CLIENT_SEC_KEY" value="676157FF-5EF3-40A5-87B1-3DAD8E987B27" />
-            <!-- end kutumba -->
+            <add key="KUTUMBA_CLIENT_SEC_KEY" value="66BFC20C-DFF0-41D5-A8D6-926F51C5DC52" />
+            <!-- sms details -->
             <add key="SMS_SENDER_ID" value="MOBKAR" />
             <add key="SMS_USERNAME" value="Mobile_1-MOBKAR9" />
             <add key="SMS_PASSWORD" value="mobkar9@1234" />
@@ -29,7 +26,7 @@
             <!-- ekyc details -->
             <add key="EKYC_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/AuthRequest.aspx" />
             <add key="EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/EKYCService.aspx" />
-            <add key="EKYC_REDIRECTION_URL" value="https://parihara3.karnataka.gov.in/mobile/ekyRedirection" />
+            <add key="EKYC_REDIRECTION_URL" value="http://parihara3.karnataka.gov.in/api/mobile/ekyRedirection" />
             <add key="DEP_CODE" value="1" />
             <add key="APPLI_CODE" value="30" />
             <add key="SCHEME_CODE" value="229" />
@@ -50,7 +47,11 @@
             <add key="KUTUMA_CLIENT_CODE" value="3831757727" />
             <add key="KUTUMBA_CLIENT_SEC_KEY" value="676157FF-5EF3-40A5-87B1-3DAD8E987B27" />
             <add key="SECRET_KEY" value="lllkjytrdxcvbnaystdyasyjhbvcf" />
-            <add key="PRO_URL" value="https://pariahra3.karnataka.gov.in" />
+            <add key="PRO_URL" value="http://pariahra3.karnataka.gov.in" /> 
+            <add key="SECRET_KEY" value="1234567890poiutrewqasdfghjklmnbvcxz" /> 
+
+            <add key="ESCOM_API" value="http://10.10.31.64/GetEscomData/api/GetEscomData" /> 
+            <add key="RD_API" value="https://sevasindhu.karnataka.gov.in/MinorityAPI/GetMinoritiesData" /> 
 
   </appSettings>
 
