demo auth and otp issue fixed

--- a/web.config
+++ b/web.config
@@ -34,6 +34,7 @@
             <add key="INTEGRATION_PASS" value="8$xaSXRJ_6p7967X" />
             <add key="SERVICE_CODE" value="3" />
 
+            <add key="DEMO_EKYC_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/AuthRequest.aspx" />
             <add key="DEMO_EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/IDService.aspx" />
             <add key="DEMO_DEP_CODE" value="1" />
             <add key="DEMO_APPLI_CODE" value="1068" />
