counts and survey listt api are adding

--- a/web.test.config
+++ b/web.test.config
@@ -27,20 +27,20 @@
             <add key="EKYC_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/AuthRequest.aspx" />
             <add key="EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/EKYCService.aspx" />
             <add key="EKYC_REDIRECTION_URL" value="http://parihara3.karnataka.gov.in/api/mobile/ekyRedirection" />
-            <add key="DEP_CODE" value="85" />
-            <add key="APPLI_CODE" value="37" />
-            <add key="SCHEME_CODE" value="455" />
-            <add key="INTEGRATION_KEY" value="d905cdfe-6867-4f28-9e74-dac0d5bbd398" />
-            <add key="INTEGRATION_PASS" value="$PK?ub$?-!3$W7hO" />
+            <add key="DEP_CODE" value="1" />
+            <add key="APPLI_CODE" value="30" />
+            <add key="SCHEME_CODE" value="229" />
+            <add key="INTEGRATION_KEY" value="b8be83b7-b4ee-4c7d-b142-e8fb0e05a242" />
+            <add key="INTEGRATION_PASS" value="8$xaSXRJ_6p7967X" />
             <add key="SERVICE_CODE" value="3" />
 
             <add key="DEMO_EKYC_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/AuthRequest.aspx" />
             <add key="DEMO_EKYC_TOKEN_URL" value="https://dbt.karnataka.gov.in:8443/DBT_Service_ASPX/IDService.aspx" />
-            <add key="DEMO_DEP_CODE" value="85" />
-            <add key="DEMO_APPLI_CODE" value="37" />
-            <add key="DEMO_SCHEME_CODE" value="455" />
-            <add key="DEMO_INTEGRATION_KEY" value="76e26c96-2671-476e-a5ed-0172ec04ac21" />
-            <add key="DEMO_INTEGRATION_PASS" value="NiH39_pvLW480c@N" />
+            <add key="DEMO_DEP_CODE" value="1" />
+            <add key="DEMO_APPLI_CODE" value="1068" />
+            <add key="DEMO_SCHEME_CODE" value="229" />
+            <add key="DEMO_INTEGRATION_KEY" value="3505de0b-d4f0-4723-9436-15579b6129f0" />
+            <add key="DEMO_INTEGRATION_PASS" value="_qB@$2RN7859z96Z" />
 
             <add key="KUTUMBA_API" value="https://kutumba-services.karnataka.gov.in/testfidapienc1/Getbeneficiarydata" />
             <add key="KUTUMBA_IV_KEY" value="1231233213214566" />
